[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/ui_buttons_styles/normal_button_style.tres" type="StyleBox" id=1]
[ext_resource path="res://assets/ui_buttons_styles/hover_button_style.tres" type="StyleBox" id=2]
[ext_resource path="res://assets/fonts/button_dynamicfont.tres" type="DynamicFont" id=3]
[ext_resource path="res://assets/fonts/Kenney Future.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://src/UI/PauseMenu.gd" type="Script" id=5]

[sub_resource type="DynamicFont" id=1]
size = 100
outline_size = 5
outline_color = Color( 0.745098, 0.286275, 0.196078, 1 )
extra_spacing_char = -5
font_data = ExtResource( 4 )

[node name="PauseMenu" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 5 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ColorRect" type="ColorRect" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.117647 )

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -400.0
margin_top = -210.0
margin_right = 400.0
margin_bottom = 210.0
custom_constants/separation = 20

[node name="ButtonReset" type="Button" parent="Control/VBoxContainer"]
pause_mode = 2
margin_right = 800.0
margin_bottom = 200.0
rect_min_size = Vector2( 800, 200 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 3 )
custom_styles/hover = ExtResource( 2 )
custom_styles/normal = ExtResource( 1 )
text = "RESET"

[node name="MainMenu" type="Button" parent="Control/VBoxContainer"]
pause_mode = 2
margin_top = 220.0
margin_right = 800.0
margin_bottom = 420.0
rect_min_size = Vector2( 700, 200 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 1 )
custom_styles/hover = ExtResource( 2 )
custom_styles/normal = ExtResource( 1 )
text = "Main Menu"

[connection signal="pressed" from="Control/VBoxContainer/ButtonReset" to="." method="_on_ButtonReset_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/MainMenu" to="." method="_on_MainMenu_pressed"]
